[gd_scene load_steps=8 format=3 uid="uid://bqaoimey2cjdc"]

[ext_resource type="Texture2D" uid="uid://b3rf7aojdx0g7" path="res://assets/placeholders/backgrounds/background.png" id="1_krmdh"]
[ext_resource type="Script" path="res://nodes/minigames/smash/minigame_script_smash.gd" id="1_pp6s1"]
[ext_resource type="PackedScene" uid="uid://cm8epwkt0usgg" path="res://nodes/minigames/smash/player_scene_smash.tscn" id="2_n6svi"]
[ext_resource type="PackedScene" uid="uid://djldggcxeqi1l" path="res://nodes/minigames/smash/meter_scene_smash.tscn" id="3_bfxko"]
[ext_resource type="Texture2D" uid="uid://dnj551yphj65w" path="res://assets/placeholders/fruits/strawberry_bucket.png" id="3_sldch"]
[ext_resource type="Texture2D" uid="uid://cqs5f4a2wohgo" path="res://assets/placeholders/utilities/jump.png" id="6_75oga"]
[ext_resource type="Texture2D" uid="uid://dk7mwa3tydwpq" path="res://assets/placeholders/fruits/strawberry.png" id="7_u2jlk"]

[node name="MinigameSceneSmash" type="Node2D"]
script = ExtResource("1_pp6s1")

[node name="Sprite2DBackground" type="Sprite2D" parent="."]
position = Vector2(0, -6.00001)
scale = Vector2(0.541699, 0.461111)
texture = ExtResource("1_krmdh")

[node name="Sprite2DBucket" type="Sprite2D" parent="."]
position = Vector2(4, 61)
texture = ExtResource("3_sldch")

[node name="PlayerSceneSmash" parent="." instance=ExtResource("2_n6svi")]
position = Vector2(0, 21)

[node name="MeterSceneSmash" parent="." instance=ExtResource("3_bfxko")]
position = Vector2(-72, 37)

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(-208, -82)
texture = ExtResource("6_75oga")

[node name="ProgressIcon" type="Sprite2D" parent="."]
position = Vector2(-55.992, -81.992)
scale = Vector2(0.667, 0.667)
texture = ExtResource("7_u2jlk")
